--- a/config/binding.yml
+++ b/config/binding.yml
@@ -1,3 +1,4 @@
 services:
-  \PB\Config\ConfigInterface: \PB\Config\EnvConfig
-  \PB\Library\Requests\RequestInterface: \PB\Library\Requests\Curl
+  bind:
+    PB\Config\ConfigInterface: PB\Config\YmlConfig
+    PB\Library\Requests\RequestInterface: PB\Library\Requests\Curl
